@@ -2,6 +2,7 @@
     - [feature] Added --progress option to Krill-Indexer (kupietz)
     - [bugfix] Fixed vc cache tests (kupietz)
     - [security] Dependencies updated (diewald, margaretha, kupietz)
+    - [enhancement] Keep corpus or collection node name from json 
 
 0.64.3 2025-08-19
     - [feature] Add tar and zip archive input support to Krill-Indexer (kupietz)
